--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "geopattern": "^1.2.3",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "materialize-css": "^1.0.0-rc.2",
     "vuepress-plugin-container": "^1.1.1",
     "vuepress-plugin-nprogress": "^1.0.0",
     "vuepress-plugin-smooth-scroll": "^0.0.3",
